# solidity-IR-wasm

./: README.md
src/: CMakeLists.txt  main.cc
