
PROJECT(solidity-IR)

set(SRC_LIST main.cc)
set(PROJECT_BINARY_DIR ${PROJECT_BINARY_DIR}/build)
include_directories(${PROJECT_SOURCE_DIR}/src/ast/)
#FIND_LIBRARY()
MESSAGE(STATUS "THIS IS BINARY DIR " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "THIS IS SOURCE DIR " ${HELLO_SOURCE_DIR})
ADD_EXECUTABLE(solidity-IR ${SRC_LIST})



